fixed some styling issues on mobile

--- a/_sass/modules/_carousel.scss
+++ b/_sass/modules/_carousel.scss
@@ -71,12 +71,28 @@
 
 	.carousel__previous,
 	.carousel__next {
-		width: 10%;
 		z-index: 800;
-		text-align: center;
-		font-size: 44px;
+		font-size: 20px;
 		position: absolute;
-		color: $brand;
+		color: white;
+		box-shadow: 0 0 40px rgba(0,0,0,.1);
+		background-color: white;
+		border-radius: 50%;
+		height: 50px;
+		width: 50px;
+		color: rgba(0,0,0,.5);
+		display:flex;
+		justify-content: center;
+		align-items: center;
+
+		&:hover {
+			box-shadow: 0 0 40px rgba(0,0,0,.18);
+		}
+
+		&:active {
+			box-shadow: 0 0 40px rgba(0,0,0,.1);
+		}
+
 
 		i {
 			pointer-events: none;
@@ -84,11 +100,11 @@
 	}
 
 	.carousel__next {
-		right: 0;
+		right: 40px;
 	}
 
 	.carousel__previous {
-		left: 0;
+		left: 40px;
 	}
 }
 
@@ -135,3 +151,12 @@
 		color: white;
 	}
 }
+
+// @media screen and (min-width: $m-viewport) {
+// 	.carousel__container {
+// 		.carousel__previous,
+// 		.carousel__next {
+// 			color: $brand;
+// 		}
+// 	}
+// }
