--- a/_sass/modules/_navigation.scss
+++ b/_sass/modules/_navigation.scss
@@ -16,7 +16,7 @@ nav {
 	.logo {
 		text-align: left;
 		display: inline-block;
-		margin: 30px;
+		margin: 20px;
 		transition: all .2s ease-in-out;
 
 		&:hover {
@@ -31,6 +31,7 @@ nav {
 
 		img {
 			width: 70px;
+			min-width: 50px;
 			height: auto;
 			box-shadow: $shadow__logo;
 			border-radius: 35%;
@@ -43,7 +44,7 @@ nav {
 		flex-direction: row;
 		justify-content: center;
 		margin-left: auto;
-		margin-right: 30px;
+		margin-right: 0;
 
 		li {
 			margin-right: 15px;
