--- a/_sass/modules/_project.scss
+++ b/_sass/modules/_project.scss
@@ -8,7 +8,6 @@
 
 	.project__title {
 		font-size: 40px;
-		margin-bottom: 2em;
 		color: $brand;
 		text-align: center;
 	}
